--- a/src/views/Item/styles.css
+++ b/src/views/Item/styles.css
@@ -3,8 +3,11 @@
   height: 40px;
   line-height: 40px;
   text-align: center;
+  cursor: pointer;
   background-color: #eee;
   border: 1px solid #dedede;
+  transition: .15s ease-out;
+  transition-property: visibility, oapcity, border, background;
 }
 
 /* Closed state */
@@ -14,6 +17,12 @@
   border-right: 2px solid #dedede;
   border-bottom: 2px solid #dedede;
 }
+
+.item--closed:hover {
+  background-color: #dfdfdf;
+}
+
 .item--closed .item__content {
   visibility: hidden;
+  opacity: 1;
 }
