--- a/src/views/Cell/styles.css
+++ b/src/views/Cell/styles.css
@@ -7,6 +7,13 @@
   border: 1px solid #dedede;
   transition: .15s ease-out;
   transition-property: visibility, oapcity, border, background;
+  position: relative;
+}
+
+.item .item__content {
+  transform: scale(1);
+  transition: .15s ease-out;
+  transition-property: transform, visibility, opacity;
 }
 
 /* Closed state */
@@ -25,7 +32,18 @@
 
 .item--closed .item__content {
   visibility: hidden;
-  opacity: 1;
+  opacity: 0;
+  transform: scale(2);
+}
+
+/* Flagged cell */
+.item--flagged::before {
+  content: '🚩';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* Exploded mine */
