--- a/src/views/Scoreboard/styles.css
+++ b/src/views/Scoreboard/styles.css
@@ -1,22 +1,37 @@
 .scoreboard {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  flex-wrap: wrap;
+  padding: 10px 20px;
   height: 60px;
   line-height: 40px;
   vertical-align: middle;
   background: #e5e5e5;
   border: 1px solid #dedede;
   clear: both;
+
+}
+
+.mines, .time {
+  flex-grow: 1;
+  max-width: calc(50% - 20px);
 }
 
 .mines {
-  /* float: left; */
+  text-align: left;
+}
+
+.time {
+  text-align: right;
 }
 
 .status {
+
+  flex-grow: 1;
   /* display: inline-block; */
+  max-width: 40px;
   width: 40px;
+  min-width: 40px;
   height: 40px;
   line-height: 40px;
   text-align: center;
@@ -30,8 +45,4 @@
 
 .status:hover {
   background-color: #f5f5f5;
-}
-
-.time {
-  /* float: right; */
 }
